--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 3264,
+    "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/canvas/",
+    "label" : {
+      "none" : [ "20220817_090852" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 102,
+              "height" : 58
+            }, {
+              "width" : 204,
+              "height" : 115
+            }, {
+              "width" : 408,
+              "height" : 230
+            }, {
+              "width" : 816,
+              "height" : 459
+            }, {
+              "width" : 1632,
+              "height" : 918
+            }, {
+              "width" : 3264,
+              "height" : 1836
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 3264,
+            "@id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1836
+          } ],
+          "format" : "image/jpeg",
+          "width" : 3264,
+          "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1836
+        },
+        "target" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/canvas/"
+      } ]
+    } ],
+    "height" : 1836
+  }, {
     "width" : 4624,
     "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_143110/canvas/",
     "label" : {
