--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 4608,
+    "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/canvas/",
+    "label" : {
+      "none" : [ "20220819_140732" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 144,
+              "height" : 108
+            }, {
+              "width" : 288,
+              "height" : 216
+            }, {
+              "width" : 576,
+              "height" : 432
+            }, {
+              "width" : 1152,
+              "height" : 864
+            }, {
+              "width" : 2304,
+              "height" : 1728
+            }, {
+              "width" : 4608,
+              "height" : 3456
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 4608,
+            "@id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 3456
+          } ],
+          "format" : "image/jpeg",
+          "width" : 4608,
+          "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 3456
+        },
+        "target" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/canvas/"
+      } ]
+    } ],
+    "height" : 3456
+  }, {
     "width" : 3264,
     "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220817_090852/canvas/",
     "label" : {
