Adding manifest.json

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 3648,
+    "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718/canvas/",
+    "label" : {
+      "none" : [ "P1070718" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 114,
+              "height" : 86
+            }, {
+              "width" : 228,
+              "height" : 171
+            }, {
+              "width" : 456,
+              "height" : 342
+            }, {
+              "width" : 912,
+              "height" : 684
+            }, {
+              "width" : 1824,
+              "height" : 1368
+            }, {
+              "width" : 3648,
+              "height" : 2736
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 3648,
+            "@id" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 2736
+          } ],
+          "format" : "image/jpeg",
+          "width" : 3648,
+          "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 2736
+        },
+        "target" : "https://Camille8135.github.io/PhotographsofEgypt/images/P1070718/canvas/"
+      } ]
+    } ],
+    "height" : 2736
+  }, {
     "width" : 4608,
     "id" : "https://Camille8135.github.io/PhotographsofEgypt/images/20220819_140732/canvas/",
     "label" : {
